Bug 1592213 - Fixed skin overlapping each other
Removed Masonry as all skin items are the same height, the layout of the
page can be acheived with css only

behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -407,3 +407,24 @@
     display: block;
     margin: 0 auto;
 }
+
+// Edit/add skin page
+// See templates/skin/index.tpl
+.row.skins {
+    margin-top: 30px;
+    .skin {
+        position: relative;
+        min-height: 1px;
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 100%;
+        float: none;
+        @media screen and (min-width: $screen-xs-min) {
+            float: left;
+            width: 50%;
+        }
+        @media screen and (min-width: $screen-sm-min) {
+            width: 33.333333%;
+        }
+    }
+}
